Remove buses and corresponding stations.

--- a/timetable_kit/specs_amtrak/ethan-allen-express.toml
+++ b/timetable_kit/specs_amtrak/ethan-allen-express.toml
@@ -1,9 +1,9 @@
 title = "Ethan Allen Express Timetable"
-heading = "Ethan Allen Express & Burlington Buses"
+heading = "Ethan Allen Express"
 aria_label = "Ethan Allen Express"
 reference_date = "20240620"
 key_on_right = true
 key_bus = true
 use_bus_icon_in_cells = true
-landscape = true
+landscape = false
 for_rpa = true
