--- a/timetable_kit/specs_amtrak/keystone-service-friday-wb.toml
+++ b/timetable_kit/specs_amtrak/keystone-service-friday-wb.toml
@@ -1,6 +1,6 @@
-title = "Keystone Weekend Westbound Timetable"
-heading = "Keystone Service & Pennsylvanian: Weekend Westbound"
-aria_label = "Keystone Weekend Westbound"
+title = "Keystone Friday Westbound Timetable"
+heading = "Keystone Service & Pennsylvanian: Friday Westbound"
+aria_label = "Keystone Friday Westbound"
 top_text = "NOTE: Keystone work during fall 2024. Please see <b><a href=\"https://www.amtrak.com/service-alerts-and-notices\">https://www.amtrak.com/service-alerts-and-notices</a></b> for the latest schedule adjustments."
 reference_date = "20241001"
 landscape = true
@@ -9,4 +9,3 @@ key_d = true
 key_r = true
 compress_credits = true
 for_rpa = true
-key_on_right = true
