--- a/timetable_kit/specs_amtrak/winter-park-express.toml
+++ b/timetable_kit/specs_amtrak/winter-park-express.toml
@@ -1,6 +1,7 @@
 title = "Winter Park Express Timetable"
 heading = "Winter Park Express"
 aria_label = "Winter Park Express"
-reference_date = "20241001"
+reference_date = "20241220"
 for_rpa = true
-top_text = "The Winter Park Express ski train will run each Friday, Saturday, and Sunday from January 12 to March 31 2024.<br>It will also run on Martin Luther King Jr. Day (Monday, January 15) and Presidents’ Day (Monday, February 19).<br>There will be 'extra' runs on Thursday, March 14 and Thursday, March 21."
+top_text = "The Winter Park Express ski train will run Fridays, Saturdays and Sundays during these weekends:<br>December 20-22 and December 27-29, 2024<br>January 3-5, 2025<br><br>Expanded Service running on Thursdays, Fridays, Saturdays, Sundays and Mondays will occur from January 9 - March 31, 2025."
+programmers_warning = "Had to run with reference_date of 20250109 to get the January-March schedule"
