--- a/timetable_kit/specs_amtrak/lake-shore-limited.toml
+++ b/timetable_kit/specs_amtrak/lake-shore-limited.toml
@@ -1,8 +1,8 @@
 title = "Lake Shore Limited Timetable"
 heading = "Lake Shore Limited"
 aria_label = "Lake Shore Limited"
-reference_date = "20241117"
-top_text = "Trains 48 and 448 are the <b>same train</b> from Chicago to Albany; cars separate to go to New York City and Boston.<br>Trains 49 and 449 join at Albany to become the <b>same train</b> from Albany to Chicago."
+reference_date = "20250407"
+top_text = "Trains 48 and 448 are the <b>same train</b> from Chicago to Albany; cars separate to go to New York City and Boston.<br>Trains 49 and 449 join at Albany to become the <b>same train</b> from Albany to Chicago.<br><br><b>NOTE:</b> Track work is affecting the Lake Shore Limited from through May 1, 2025. See <b><a href=\"https://www.amtrak.com/service-alerts-and-notices\">https://www.amtrak.com/service-alerts-and-notices</a></b> for schedule adjustments."
 key_baggage = true
 key_d = true
 key_r = true
