--- a/timetable_kit/specs_amtrak/wolverine-blue-water.toml
+++ b/timetable_kit/specs_amtrak/wolverine-blue-water.toml
@@ -1,7 +1,8 @@
 title = "Wolverine & Blue Water Timetable"
 heading = "Wolverine & Blue Water"
 aria_label = "Wolverine Blue Water"
-reference_date = "20241001"
+reference_date = "20250607"
+top_text = "NOTE:</b> Track work is affecting trains 350 and 353 through October 30, 2025. See <b><a href=\"https://www.amtrak.com/service-alerts-and-notices\">https://www.amtrak.com/service-alerts-and-notices</a></b> for schedule adjustments."
 programmers_warning = "Wolverine trains have identical M-F and SaSu timetables but are listed separately, so days column is overridden: recheck this when GTFS changes. Also see Amtrak track construction notice https://www.amtrak.com/alert/wolverine-trains-350-353-temporarily-suspended.html - Trains 350 and 353 will operate on Fridays, Saturdays and Sundays only. Trains will operate normally on the following holidays: Memorial Day, Monday, May 27  Juneteenth, Wednesday, June 19  Independence Day, Thursday, July 4th  Labor Day, Monday, September 2"
 key_tz = true
 for_rpa = true
